--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
       rel="stylesheet"
     />
     <title>Shankendu Kunti | Web Developer & Creator</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./src/assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon_io/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="./src/assets/favicon_io/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./src/assets/favicon_io/android-chrome-192x192.png">
+    <link rel="shortcut icon" href="./src/assets/favicon_io/favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="./src/assets/favicon_io/site.webmanifest">
   </head>
   <body>
     <div id="root"></div>
